# WinMux

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  SECURITY.md  clippy.toml  eslint.config.js  index.html  package-lock.json  package.json  rustfmt.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/winmux-cli/: Cargo.toml
crates/winmux-cli/src/: args.rs  lib.rs  main.rs
crates/winmux-cli/tests/: cli_handlers.rs
crates/winmux-ipc-client/: Cargo.toml
crates/winmux-ipc-client/src/: client.rs  connect.rs  lib.rs
crates/winmux-protocol/: Cargo.toml
crates/winmux-protocol/src/: codec.rs  errors.rs  identity.rs  ids.rs  lib.rs  messages.rs  sha256.rs  types.rs  version.rs
crates/winmux-server/: Cargo.toml
crates/winmux-server/src/: jobobj.rs  keys.rs  lib.rs  logging.rs  main.rs  pipe.rs  pty.rs  session.rs  single_instance.rs  terminal.rs  user.rs
crates/winmux-server/src/pipe/: handshake.rs  security.rs
crates/winmux-server/tests/: handshake.rs  pty.rs  sessions.rs
crates/winmux-tray/: Cargo.toml
crates/winmux-tray/src/: commands.rs  ipc.rs  lib.rs
docs/: INDEX.md  decisions.md  known-issues.md
docs/conventions/: coding-rust.md  coding-typescript.md  git.md  naming.md
docs/nonfunctional/: accessibility.md  logging.md  performance.md  security.md  stability.md  testing.md
docs/ops/: manual-test-checklist.md  troubleshooting.md
docs/spec/: 00-overview.md  01-ipc-protocol.md  02-pty-and-terminal.md  03-session-model.md  04-key-handling.md  05-tmux-compat.md  06-cli.md  07-tray-and-gui.md  08-persistence.md  09-config.md  10-i18n.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate.py
src-tauri/src/: main.rs
src/components/: PaneView.tsx  SessionLauncher.tsx  StatusBar.tsx
src/lib/: codec.test.ts  codec.ts  i18n.ts  ime.test.ts  ime.ts  keyboard.test.ts  keyboard.ts  logger.ts  protocol.test.ts  protocol.ts  server-client.ts
src/locales/: en.json  ko.json
src/store/: session.ts
src/styles/: globals.css  theme-dark.css
