[package]
name = "winmux-ipc-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared Named Pipe IPC client for the WinMux tray and CLI."

[lints]
workspace = true

[lib]
name = "winmux_ipc_client"
path = "src/lib.rs"

[dependencies]
winmux-protocol = { path = "../winmux-protocol" }

# Single shared async runtime version. Tray uses multi-thread, CLI
# uses current-thread — the features below cover both.
tokio = { version = "1.40", default-features = false, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "net",
    "time",
] }

anyhow = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "1.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
